fix post overflow

--- a/_scss/4-modules/_post-preview.scss
+++ b/_scss/4-modules/_post-preview.scss
@@ -68,7 +68,7 @@
   }
 
   &.header {
-    min-height: 40vh;
+    min-height: 30vh;
   }
 }
 
